gitops/components/rhtpa/postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tpa-postgresql
  namespace: trusted-profile-analyzer
  labels:
    app.kubernetes.io/name: tpa-postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tpa-postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tpa-postgresql
    spec:
      serviceAccountName: postgresql
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/worker
                    operator: Exists
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      securityContext:
        fsGroup: 26
      containers:
        - name: postgresql
          image: registry.redhat.io/rhel9/postgresql-16:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/pgsql/data
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 4Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tpa-postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: tpa-postgresql
  namespace: trusted-profile-analyzer
spec:
  selector:
    app.kubernetes.io/name: tpa-postgresql
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
